--- a/.gitignore
+++ b/.gitignore
@@ -37,23 +37,23 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-./api/.bundle
+api/.bundle
 
 # Ignore the default SQLite database.
-./api/db/*.sqlite3
-./api/db/*.sqlite3-journal
+api/db/*.sqlite3
+api/db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-./api/log/*
-./api/tmp/*
-./api/!log/.keep
-./api/!tmp/.keep
+api/log/*
+api/tmp/*
+api/!log/.keep
+api/!tmp/.keep
 
 # Ignore uploaded files in development
-./api/storage/*
-./api/!/storage/.keep
+api/storage/*
+api/!/storage/.keep
 
-./api/.byebug_history
+api/.byebug_history
 
 # Ignore master key for decrypting credentials and more.
-./api/config/master.key
+api/config/master.key
